--- a/src/components/notes/Notes.style.scss
+++ b/src/components/notes/Notes.style.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0 20vw;
   flex-wrap: wrap;
   background: aliceblue;
