--- a/src/components/notes/Note.style.css
+++ b/src/components/notes/Note.style.css
@@ -3,10 +3,13 @@
   margin: 15px;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  border-color: white;
   display: flex;
-  flex-direction: column;
   background-color: white;
+}
+
+.note-row-container {
+  flex-direction: row;
+  display: flex;
 }
 
 .note-body {
@@ -62,4 +65,9 @@
     transform: scale(1, 1);
     opacity: 1;
   }
+}
+
+.mention {
+  color: #FF7F50;
+  font-weight: bold;
 }
