--- a/src/components/notes/Notes.style.scss
+++ b/src/components/notes/Notes.style.scss
@@ -6,7 +6,8 @@
 
 .notes-title-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
   padding: 5vh 0;
 }
 
